// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Mosaic> Snapshots and structure should render story FiveThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        alt="Image 1"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        alt="Image 2"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1-s200.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        alt="Image 3"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape2.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        align="left"
        alt="Image 4"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape3.jpg"
        loading="lazy"
        theme="light"
      />
      <div
        className="lumx-mosaic__overlay"
      >
        <span>
          +
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story FourThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        alt="Image 1"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        alt="Image 2"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1-s200.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        alt="Image 3"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape2.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        align="left"
        alt="Image 4"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape3.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story OneThumbnail 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-1-thumbnail"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        alt="Image 1"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story SixThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-4-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        alt="Image 1"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1.jpg"
        loading="lazy"
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        alt="Image 2"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1-s200.jpg"
        loading="lazy"
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        alt="Image 3"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape2.jpg"
        loading="lazy"
        onClick={[Function]}
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="3"
    >
      <Thumbnail
        align="left"
        alt="Image 4"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape3.jpg"
        loading="lazy"
        onClick={[Function]}
        theme="light"
      />
      <div
        className="lumx-mosaic__overlay"
      >
        <span>
          +
          2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story ThreeThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-3-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        alt="Image 1"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        alt="Image 2"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1-s200.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="2"
    >
      <Thumbnail
        align="left"
        alt="Image 3"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape2.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
  </div>
</div>
`;

exports[`<Mosaic> Snapshots and structure should render story TwoThumbnails 1`] = `
<div
  className="lumx-mosaic lumx-mosaic--theme-light lumx-mosaic--has-2-thumbnails"
>
  <div
    className="lumx-mosaic__wrapper"
  >
    <div
      className="lumx-mosaic__thumbnail"
      key="0"
    >
      <Thumbnail
        align="left"
        alt="Image 1"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
    <div
      className="lumx-mosaic__thumbnail"
      key="1"
    >
      <Thumbnail
        align="left"
        alt="Image 2"
        aspectRatio="free"
        fallback="M19,3A2,2 0 0,1 21,5V11H19V13H19L17,13V15H15V17H13V19H11V21H5C3.89,21 3,20.1 3,19V5A2,2 0 0,1 5,3H19M21,15V19A2,2 0 0,1 19,21H19L15,21V19H17V17H19V15H21M19,8.5A0.5,0.5 0 0,0 18.5,8H5.5A0.5,0.5 0 0,0 5,8.5V15.5A0.5,0.5 0 0,0 5.5,16H11V15H13V13H15V11H17V9H19V8.5Z"
        fillHeight={true}
        image="/demo-assets/landscape1-s200.jpg"
        loading="lazy"
        theme="light"
      />
    </div>
  </div>
</div>
`;
